# reinforce

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
initial_helper_docs/: RL_Project_Roadmap.md  RL_for_Large_Model_Training.md
models/: load_model.py  models.py  test_model.py
reinforce/: __init__.py
reinforce/configs/: __init__.py  sentiment_config.py
reinforce/dataloader/: __init__.py  sentiment_dataset.py
reinforce/models/: __init__.py  models.py
reinforce/training/: __init__.py  baseline.py  reinforce_trainer.py  reward.py
scripts/: finetune_gpt.py  test_model.py  train_sentiment_reinforce.py
scripts/finetune_test_gpt2/: finetune_gpt_fineweb_test.py  finetune_gpt_wiki_test.py
